assets/skydive-analyzer/service-ui.yaml
# Service for Skydive UI
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: skydive-analyzer
    name: skydive-ui
  spec:
    ports:
      - name: ui
        port: 8080
        protocol: TCP
        targetPort: 8080
    selector:
      app: skydive
      tier: analyzer
    sessionAffinity: None
    type: NodePort
