assets/skydive-analyzer/route.yaml
# Route for Skydive Analyzer
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      app: skydive-analyzer
    name: skydive-analyzer
  spec:
    port:
      targetPort: api
    to:
      kind: Service
      name: skydive-analyzer
      weight: 100
    wildcardPolicy: None
